# kmeow

./: .gitignore  README.md  pyproject.toml
src/kmeow/: __init__.py  cli.py  utils.py
src/kmeow/guide/: describe.py
src/kmeow/sources/: kbase.py
tests/: __init__.py
