[tool.poetry]
name = "kmeow"
version = "0.0.1"
description = ""
authors = ["Your Name <you@example.com>"]
license = "BSD-3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.1"
langchain = "^0.0.172"
click = "^8.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
